# file-api-server-v2

./: Cargo.toml
src/: main.rs
uploaded-excel/: regulation.xlsx  test.xlsx
