[package]
name = "file-api-server-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
calamine = "0.19.1"
mysql = "17.0.0"
mime = "0.3.16"
actix-form-data = "0.6.2"
form-data = "0.4.2"
actix-multipart = "0.4.0"
serde = "1.0.149"
actix-files = "0.6.2"